# open-intelligence-kit

./: .gitignore  LICENSE  README.md  REVIEW.md  pyproject.toml
docs/: artifact-format.md  workflow.md
examples/: example-brief.md
policies/: responsible-use.md  source-reliability.md
src/open_intelligence_kit/: __init__.py  artifact_paths.py  batch_read_urls.py  deep_read_url.py  source_grading.py
templates/: intelligence-brief-template.md  market-research-template.md  tech-research-template.md
